--- a/index.html
+++ b/index.html
@@ -14,44 +14,48 @@
 
 <body>
     <div class='nav'>
-        <ul class="main-menu">
-            <li>
-                <a href="#">Element 1</a>
-            </li>
-            <li>Element 2
-                <ul class="menu-sub">
-                    <li>
-                        <a href="#">Element 2.1</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 2.2</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 2.2</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 2.2</a>
-                    </li>
-                </ul>
-            </li>
-            <li><a href="#">Element 3</a></li>
-            <li>Element 4
-                <ul>
-                    <li>
-                        <a href="#">Element 4.1</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 4.2</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 4.3</a>
-                    </li>
-                    <li>
-                        <a href="#">Element 4.4</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+        <div class="container">
+            <ul class="main-menu">
+                <li class="main-menu__item">
+                    <a href="#">Element 1</a>
+                </li>
+                <li class="main-menu__item">Element 2
+                    <ul class="sub-menu">
+                        <li class="sub-menu__item">
+                            <a href="#">Element 2.1</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 2.2</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 2.2</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 2.2</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="main-menu__item">
+                    <a href="#">Element 3</a>
+                </li>
+                <li class="main-menu__item">Element 4
+                    <ul class="sub-menu">
+                        <li class="sub-menu__item">
+                            <a href="#">Element 4.1</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 4.2</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 4.3</a>
+                        </li>
+                        <li class="sub-menu__item">
+                            <a href="#">Element 4.4</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
