add animation to dropdown menu

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 </li>
                 <li class="main-menu__item">Element 2
                     <ul class="sub-menu">
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--1">
                             <a href="#">Element 2.1</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--2">
                             <a href="#">Element 2.2</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--3">
                             <a href="#">Element 2.2</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--4">
                             <a href="#">Element 2.2</a>
                         </li>
                     </ul>
@@ -40,16 +40,16 @@
                 </li>
                 <li class="main-menu__item">Element 4
                     <ul class="sub-menu">
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--1">
                             <a href="#">Element 4.1</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--2">
                             <a href="#">Element 4.2</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--3">
                             <a href="#">Element 4.3</a>
                         </li>
-                        <li class="sub-menu__item">
+                        <li class="sub-menu__item sub-menu__item--4">
                             <a href="#">Element 4.4</a>
                         </li>
                     </ul>
